FrontEnd/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> LBRACE action_new_scope stmt_list RBRACE
Rule 3     action_new_scope -> <empty>
Rule 4     stmt_list -> stmt_list stmt
Rule 5     stmt_list -> <empty>
Rule 6     stmt -> type ID SEMICOLON
Rule 7     stmt -> ID ASSIGN expr SEMICOLON
Rule 8     stmt -> block
Rule 9     stmt -> READ ID SEMICOLON
Rule 10    stmt -> WRITE logicor SEMICOLON
Rule 11    stmt -> IF LPAREN logicor RPAREN block
Rule 12    stmt -> IF LPAREN logicor RPAREN block ELSE block
Rule 13    stmt -> WHILE LPAREN logicor RPAREN block
Rule 14    type -> INT
Rule 15    logicor -> logicor OR logicand
Rule 16    logicor -> logicand
Rule 17    logicand -> logicand AND compEq
Rule 18    logicand -> compEq
Rule 19    compEq -> compEq EQUALTO comp
Rule 20    compEq -> compEq NOTEQUALTO comp
Rule 21    compEq -> comp
Rule 22    comp -> comp LESSTHAN expr
Rule 23    comp -> comp LESSEQUALTO expr
Rule 24    comp -> comp GREATERTHAN expr
Rule 25    comp -> comp GREATEREQUALTO expr
Rule 26    comp -> expr
Rule 27    expr -> expr PLUS term
Rule 28    expr -> expr MINUS term
Rule 29    expr -> term
Rule 30    term -> term TIMES factor
Rule 31    term -> term DIVIDE factor
Rule 32    term -> term MODULO factor
Rule 33    term -> factor
Rule 34    factor -> MINUS factor
Rule 35    factor -> NOT factor
Rule 36    factor -> ID
Rule 37    factor -> NUM
Rule 38    factor -> LPAREN logicor RPAREN

Terminals, with rules where they appear

AND                  : 17
ASSIGN               : 7
DIVIDE               : 31
ELSE                 : 12
EQUALTO              : 19
GREATEREQUALTO       : 25
GREATERTHAN          : 24
ID                   : 6 7 9 36
IF                   : 11 12
INT                  : 14
LBRACE               : 2
LESSEQUALTO          : 23
LESSTHAN             : 22
LPAREN               : 11 12 13 38
MINUS                : 28 34
MODULO               : 32
NOT                  : 35
NOTEQUALTO           : 20
NUM                  : 37
OR                   : 15
PLUS                 : 27
RBRACE               : 2
READ                 : 9
RPAREN               : 11 12 13 38
SEMICOLON            : 6 7 9 10
TIMES                : 30
WHILE                : 13
WRITE                : 10
error                : 

Nonterminals, with rules where they appear

action_new_scope     : 2
block                : 1 8 11 12 12 13
comp                 : 19 20 21 22 23 24 25
compEq               : 17 18 19 20
expr                 : 7 22 23 24 25 26 27 28
factor               : 30 31 32 33 34 35
logicand             : 15 16 17
logicor              : 10 11 12 13 15 38
program              : 0
stmt                 : 4
stmt_list            : 2 4
term                 : 27 28 29 30 31 32
type                 : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . LBRACE action_new_scope stmt_list RBRACE

    LBRACE          shift and go to state 3

    program                        shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> LBRACE . action_new_scope stmt_list RBRACE
    (3) action_new_scope -> .

    RBRACE          reduce using rule 3 (action_new_scope -> .)
    ID              reduce using rule 3 (action_new_scope -> .)
    READ            reduce using rule 3 (action_new_scope -> .)
    WRITE           reduce using rule 3 (action_new_scope -> .)
    IF              reduce using rule 3 (action_new_scope -> .)
    WHILE           reduce using rule 3 (action_new_scope -> .)
    INT             reduce using rule 3 (action_new_scope -> .)
    LBRACE          reduce using rule 3 (action_new_scope -> .)

    action_new_scope               shift and go to state 4

state 4

    (2) block -> LBRACE action_new_scope . stmt_list RBRACE
    (4) stmt_list -> . stmt_list stmt
    (5) stmt_list -> .

    RBRACE          reduce using rule 5 (stmt_list -> .)
    ID              reduce using rule 5 (stmt_list -> .)
    READ            reduce using rule 5 (stmt_list -> .)
    WRITE           reduce using rule 5 (stmt_list -> .)
    IF              reduce using rule 5 (stmt_list -> .)
    WHILE           reduce using rule 5 (stmt_list -> .)
    INT             reduce using rule 5 (stmt_list -> .)
    LBRACE          reduce using rule 5 (stmt_list -> .)

    stmt_list                      shift and go to state 5

state 5

    (2) block -> LBRACE action_new_scope stmt_list . RBRACE
    (4) stmt_list -> stmt_list . stmt
    (6) stmt -> . type ID SEMICOLON
    (7) stmt -> . ID ASSIGN expr SEMICOLON
    (8) stmt -> . block
    (9) stmt -> . READ ID SEMICOLON
    (10) stmt -> . WRITE logicor SEMICOLON
    (11) stmt -> . IF LPAREN logicor RPAREN block
    (12) stmt -> . IF LPAREN logicor RPAREN block ELSE block
    (13) stmt -> . WHILE LPAREN logicor RPAREN block
    (14) type -> . INT
    (2) block -> . LBRACE action_new_scope stmt_list RBRACE

    RBRACE          shift and go to state 6
    ID              shift and go to state 9
    READ            shift and go to state 11
    WRITE           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    INT             shift and go to state 15
    LBRACE          shift and go to state 3

    stmt                           shift and go to state 7
    type                           shift and go to state 8
    block                          shift and go to state 10

state 6

    (2) block -> LBRACE action_new_scope stmt_list RBRACE .

    $end            reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    RBRACE          reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    ID              reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    READ            reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    WRITE           reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    IF              reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    WHILE           reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    INT             reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    LBRACE          reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)
    ELSE            reduce using rule 2 (block -> LBRACE action_new_scope stmt_list RBRACE .)


state 7

    (4) stmt_list -> stmt_list stmt .

    RBRACE          reduce using rule 4 (stmt_list -> stmt_list stmt .)
    ID              reduce using rule 4 (stmt_list -> stmt_list stmt .)
    READ            reduce using rule 4 (stmt_list -> stmt_list stmt .)
    WRITE           reduce using rule 4 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 4 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 4 (stmt_list -> stmt_list stmt .)
    INT             reduce using rule 4 (stmt_list -> stmt_list stmt .)
    LBRACE          reduce using rule 4 (stmt_list -> stmt_list stmt .)


state 8

    (6) stmt -> type . ID SEMICOLON

    ID              shift and go to state 16


state 9

    (7) stmt -> ID . ASSIGN expr SEMICOLON

    ASSIGN          shift and go to state 17


state 10

    (8) stmt -> block .

    RBRACE          reduce using rule 8 (stmt -> block .)
    ID              reduce using rule 8 (stmt -> block .)
    READ            reduce using rule 8 (stmt -> block .)
    WRITE           reduce using rule 8 (stmt -> block .)
    IF              reduce using rule 8 (stmt -> block .)
    WHILE           reduce using rule 8 (stmt -> block .)
    INT             reduce using rule 8 (stmt -> block .)
    LBRACE          reduce using rule 8 (stmt -> block .)


state 11

    (9) stmt -> READ . ID SEMICOLON

    ID              shift and go to state 18


state 12

    (10) stmt -> WRITE . logicor SEMICOLON
    (15) logicor -> . logicor OR logicand
    (16) logicor -> . logicand
    (17) logicand -> . logicand AND compEq
    (18) logicand -> . compEq
    (19) compEq -> . compEq EQUALTO comp
    (20) compEq -> . compEq NOTEQUALTO comp
    (21) compEq -> . comp
    (22) comp -> . comp LESSTHAN expr
    (23) comp -> . comp LESSEQUALTO expr
    (24) comp -> . comp GREATERTHAN expr
    (25) comp -> . comp GREATEREQUALTO expr
    (26) comp -> . expr
    (27) expr -> . expr PLUS term
    (28) expr -> . expr MINUS term
    (29) expr -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term MODULO factor
    (33) term -> . factor
    (34) factor -> . MINUS factor
    (35) factor -> . NOT factor
    (36) factor -> . ID
    (37) factor -> . NUM
    (38) factor -> . LPAREN logicor RPAREN

    MINUS           shift and go to state 25
    NOT             shift and go to state 27
    ID              shift and go to state 28
    NUM             shift and go to state 29
    LPAREN          shift and go to state 30

    logicor                        shift and go to state 19
    logicand                       shift and go to state 20
    compEq                         shift and go to state 21
    comp                           shift and go to state 22
    expr                           shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 13

    (11) stmt -> IF . LPAREN logicor RPAREN block
    (12) stmt -> IF . LPAREN logicor RPAREN block ELSE block

    LPAREN          shift and go to state 31


state 14

    (13) stmt -> WHILE . LPAREN logicor RPAREN block

    LPAREN          shift and go to state 32


state 15

    (14) type -> INT .

    ID              reduce using rule 14 (type -> INT .)


state 16

    (6) stmt -> type ID . SEMICOLON

    SEMICOLON       shift and go to state 33


state 17

    (7) stmt -> ID ASSIGN . expr SEMICOLON
    (27) expr -> . expr PLUS term
    (28) expr -> . expr MINUS term
    (29) expr -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term MODULO factor
    (33) term -> . factor
    (34) factor -> . MINUS factor
    (35) factor -> . NOT factor
    (36) factor -> . ID
    (37) factor -> . NUM
    (38) factor -> . LPAREN logicor RPAREN

    MINUS           shift and go to state 25
    NOT             shift and go to state 27
    ID              shift and go to state 28
    NUM             shift and go to state 29
    LPAREN          shift and go to state 30

    expr                           shift and go to state 34
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 18

    (9) stmt -> READ ID . SEMICOLON

    SEMICOLON       shift and go to state 35


state 19

    (10) stmt -> WRITE logicor . SEMICOLON
    (15) logicor -> logicor . OR logicand

    SEMICOLON       shift and go to state 36
    OR              shift and go to state 37


state 20

    (16) logicor -> logicand .
    (17) logicand -> logicand . AND compEq

    SEMICOLON       reduce using rule 16 (logicor -> logicand .)
    OR              reduce using rule 16 (logicor -> logicand .)
    RPAREN          reduce using rule 16 (logicor -> logicand .)
    AND             shift and go to state 38


state 21

    (18) logicand -> compEq .
    (19) compEq -> compEq . EQUALTO comp
    (20) compEq -> compEq . NOTEQUALTO comp

    AND             reduce using rule 18 (logicand -> compEq .)
    SEMICOLON       reduce using rule 18 (logicand -> compEq .)
    OR              reduce using rule 18 (logicand -> compEq .)
    RPAREN          reduce using rule 18 (logicand -> compEq .)
    EQUALTO         shift and go to state 39
    NOTEQUALTO      shift and go to state 40


state 22

    (21) compEq -> comp .
    (22) comp -> comp . LESSTHAN expr
    (23) comp -> comp . LESSEQUALTO expr
    (24) comp -> comp . GREATERTHAN expr
    (25) comp -> comp . GREATEREQUALTO expr

    EQUALTO         reduce using rule 21 (compEq -> comp .)
    NOTEQUALTO      reduce using rule 21 (compEq -> comp .)
    AND             reduce using rule 21 (compEq -> comp .)
    SEMICOLON       reduce using rule 21 (compEq -> comp .)
    OR              reduce using rule 21 (compEq -> comp .)
    RPAREN          reduce using rule 21 (compEq -> comp .)
    LESSTHAN        shift and go to state 41
    LESSEQUALTO     shift and go to state 42
    GREATERTHAN     shift and go to state 43
    GREATEREQUALTO  shift and go to state 44


state 23

    (26) comp -> expr .
    (27) expr -> expr . PLUS term
    (28) expr -> expr . MINUS term

    LESSTHAN        reduce using rule 26 (comp -> expr .)
    LESSEQUALTO     reduce using rule 26 (comp -> expr .)
    GREATERTHAN     reduce using rule 26 (comp -> expr .)
    GREATEREQUALTO  reduce using rule 26 (comp -> expr .)
    EQUALTO         reduce using rule 26 (comp -> expr .)
    NOTEQUALTO      reduce using rule 26 (comp -> expr .)
    AND             reduce using rule 26 (comp -> expr .)
    SEMICOLON       reduce using rule 26 (comp -> expr .)
    OR              reduce using rule 26 (comp -> expr .)
    RPAREN          reduce using rule 26 (comp -> expr .)
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46


state 24

    (29) expr -> term .
    (30) term -> term . TIMES factor
    (31) term -> term . DIVIDE factor
    (32) term -> term . MODULO factor

    PLUS            reduce using rule 29 (expr -> term .)
    MINUS           reduce using rule 29 (expr -> term .)
    LESSTHAN        reduce using rule 29 (expr -> term .)
    LESSEQUALTO     reduce using rule 29 (expr -> term .)
    GREATERTHAN     reduce using rule 29 (expr -> term .)
    GREATEREQUALTO  reduce using rule 29 (expr -> term .)
    EQUALTO         reduce using rule 29 (expr -> term .)
    NOTEQUALTO      reduce using rule 29 (expr -> term .)
    AND             reduce using rule 29 (expr -> term .)
    SEMICOLON       reduce using rule 29 (expr -> term .)
    OR              reduce using rule 29 (expr -> term .)
    RPAREN          reduce using rule 29 (expr -> term .)
    TIMES           shift and go to state 47
    DIVIDE          shift and go to state 48
    MODULO          shift and go to state 49


state 25

    (34) factor -> MINUS . factor
    (34) factor -> . MINUS factor
    (35) factor -> . NOT factor
    (36) factor -> . ID
    (37) factor -> . NUM
    (38) factor -> . LPAREN logicor RPAREN

    MINUS           shift and go to state 25
    NOT             shift and go to state 27
    ID              shift and go to state 28
    NUM             shift and go to state 29
    LPAREN          shift and go to state 30

    factor                         shift and go to state 50

state 26

    (33) term -> factor .

    TIMES           reduce using rule 33 (term -> factor .)
    DIVIDE          reduce using rule 33 (term -> factor .)
    MODULO          reduce using rule 33 (term -> factor .)
    PLUS            reduce using rule 33 (term -> factor .)
    MINUS           reduce using rule 33 (term -> factor .)
    LESSTHAN        reduce using rule 33 (term -> factor .)
    LESSEQUALTO     reduce using rule 33 (term -> factor .)
    GREATERTHAN     reduce using rule 33 (term -> factor .)
    GREATEREQUALTO  reduce using rule 33 (term -> factor .)
    EQUALTO         reduce using rule 33 (term -> factor .)
    NOTEQUALTO      reduce using rule 33 (term -> factor .)
    AND             reduce using rule 33 (term -> factor .)
    SEMICOLON       reduce using rule 33 (term -> factor .)
    OR              reduce using rule 33 (term -> factor .)
    RPAREN          reduce using rule 33 (term -> factor .)


state 27

    (35) factor -> NOT . factor
    (34) factor -> . MINUS factor
    (35) factor -> . NOT factor
    (36) factor -> . ID
    (37) factor -> . NUM
    (38) factor -> . LPAREN logicor RPAREN

    MINUS           shift and go to state 25
    NOT             shift and go to state 27
    ID              shift and go to state 28
    NUM             shift and go to state 29
    LPAREN          shift and go to state 30

    factor                         shift and go to state 51

state 28

    (36) factor -> ID .

    TIMES           reduce using rule 36 (factor -> ID .)
    DIVIDE          reduce using rule 36 (factor -> ID .)
    MODULO          reduce using rule 36 (factor -> ID .)
    PLUS            reduce using rule 36 (factor -> ID .)
    MINUS           reduce using rule 36 (factor -> ID .)
    LESSTHAN        reduce using rule 36 (factor -> ID .)
    LESSEQUALTO     reduce using rule 36 (factor -> ID .)
    GREATERTHAN     reduce using rule 36 (factor -> ID .)
    GREATEREQUALTO  reduce using rule 36 (factor -> ID .)
    EQUALTO         reduce using rule 36 (factor -> ID .)
    NOTEQUALTO      reduce using rule 36 (factor -> ID .)
    AND             reduce using rule 36 (factor -> ID .)
    SEMICOLON       reduce using rule 36 (factor -> ID .)
    OR              reduce using rule 36 (factor -> ID .)
    RPAREN          reduce using rule 36 (factor -> ID .)


state 29

    (37) factor -> NUM .

    TIMES           reduce using rule 37 (factor -> NUM .)
    DIVIDE          reduce using rule 37 (factor -> NUM .)
    MODULO          reduce using rule 37 (factor -> NUM .)
    PLUS            reduce using rule 37 (factor -> NUM .)
    MINUS           reduce using rule 37 (factor -> NUM .)
    LESSTHAN        reduce using rule 37 (factor -> NUM .)
    LESSEQUALTO     reduce using rule 37 (factor -> NUM .)
    GREATERTHAN     reduce using rule 37 (factor -> NUM .)
    GREATEREQUALTO  reduce using rule 37 (factor -> NUM .)
    EQUALTO         reduce using rule 37 (factor -> NUM .)
    NOTEQUALTO      reduce using rule 37 (factor -> NUM .)
    AND             reduce using rule 37 (factor -> NUM .)
    SEMICOLON       reduce using rule 37 (factor -> NUM .)
    OR              reduce using rule 37 (factor -> NUM .)
    RPAREN          reduce using rule 37 (factor -> NUM .)


state 30

    (38) factor -> LPAREN . logicor RPAREN
    (15) logicor -> . logicor OR logicand
    (16) logicor -> . logicand
    (17) logicand -> . logicand AND compEq
    (18) logicand -> . compEq
    (19) compEq -> . compEq EQUALTO comp
    (20) compEq -> . compEq NOTEQUALTO comp
    (21) compEq -> . comp
    (22) comp -> . comp LESSTHAN expr
    (23) comp -> . comp LESSEQUALTO expr
    (24) comp -> . comp GREATERTHAN expr
    (25) comp -> . comp GREATEREQUALTO expr
    (26) comp -> . expr
    (27) expr -> . expr PLUS term
    (28) expr -> . expr MINUS term
    (29) expr -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term MODULO factor
    (33) term -> . factor
    (34) factor -> . MINUS factor
    (35) factor -> . NOT factor
    (36) factor -> . ID
    (37) factor -> . NUM
    (38) factor -> . LPAREN logicor RPAREN

    MINUS           shift and go to state 25
    NOT             shift and go to state 27
    ID              shift and go to state 28
    NUM             shift and go to state 29
    LPAREN          shift and go to state 30

    logicor                        shift and go to state 52
    logicand                       shift and go to state 20
    compEq                         shift and go to state 21
    comp                           shift and go to state 22
    expr                           shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 31

    (11) stmt -> IF LPAREN . logicor RPAREN block
    (12) stmt -> IF LPAREN . logicor RPAREN block ELSE block
    (15) logicor -> . logicor OR logicand
    (16) logicor -> . logicand
    (17) logicand -> . logicand AND compEq
    (18) logicand -> . compEq
    (19) compEq -> . compEq EQUALTO comp
    (20) compEq -> . compEq NOTEQUALTO comp
    (21) compEq -> . comp
    (22) comp -> . comp LESSTHAN expr
    (23) comp -> . comp LESSEQUALTO expr
    (24) comp -> . comp GREATERTHAN expr
    (25) comp -> . comp GREATEREQUALTO expr
    (26) comp -> . expr
    (27) expr -> . expr PLUS term
    (28) expr -> . expr MINUS term
    (29) expr -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term MODULO factor
    (33) term -> . factor
    (34) factor -> . MINUS factor
    (35) factor -> . NOT factor
    (36) factor -> . ID
    (37) factor -> . NUM
    (38) factor -> . LPAREN logicor RPAREN

    MINUS           shift and go to state 25
    NOT             shift and go to state 27
    ID              shift and go to state 28
    NUM             shift and go to state 29
    LPAREN          shift and go to state 30

    logicor                        shift and go to state 53
    logicand                       shift and go to state 20
    compEq                         shift and go to state 21
    comp                           shift and go to state 22
    expr                           shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 32

    (13) stmt -> WHILE LPAREN . logicor RPAREN block
    (15) logicor -> . logicor OR logicand
    (16) logicor -> . logicand
    (17) logicand -> . logicand AND compEq
    (18) logicand -> . compEq
    (19) compEq -> . compEq EQUALTO comp
    (20) compEq -> . compEq NOTEQUALTO comp
    (21) compEq -> . comp
    (22) comp -> . comp LESSTHAN expr
    (23) comp -> . comp LESSEQUALTO expr
    (24) comp -> . comp GREATERTHAN expr
    (25) comp -> . comp GREATEREQUALTO expr
    (26) comp -> . expr
    (27) expr -> . expr PLUS term
    (28) expr -> . expr MINUS term
    (29) expr -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term MODULO factor
    (33) term -> . factor
    (34) factor -> . MINUS factor
    (35) factor -> . NOT factor
    (36) factor -> . ID
    (37) factor -> . NUM
    (38) factor -> . LPAREN logicor RPAREN

    MINUS           shift and go to state 25
    NOT             shift and go to state 27
    ID              shift and go to state 28
    NUM             shift and go to state 29
    LPAREN          shift and go to state 30

    logicor                        shift and go to state 54
    logicand                       shift and go to state 20
    compEq                         shift and go to state 21
    comp                           shift and go to state 22
    expr                           shift and go to state 23
    term                           shift and go to state 24
    factor                         shift and go to state 26

state 33

    (6) stmt -> type ID SEMICOLON .

    RBRACE          reduce using rule 6 (stmt -> type ID SEMICOLON .)
    ID              reduce using rule 6 (stmt -> type ID SEMICOLON .)
    READ            reduce using rule 6 (stmt -> type ID SEMICOLON .)
    WRITE           reduce using rule 6 (stmt -> type ID SEMICOLON .)
    IF              reduce using rule 6 (stmt -> type ID SEMICOLON .)
    WHILE           reduce using rule 6 (stmt -> type ID SEMICOLON .)
    INT             reduce using rule 6 (stmt -> type ID SEMICOLON .)
    LBRACE          reduce using rule 6 (stmt -> type ID SEMICOLON .)


state 34

    (7) stmt -> ID ASSIGN expr . SEMICOLON
    (27) expr -> expr . PLUS term
    (28) expr -> expr . MINUS term

    SEMICOLON       shift and go to state 55
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46


state 35

    (9) stmt -> READ ID SEMICOLON .

    RBRACE          reduce using rule 9 (stmt -> READ ID SEMICOLON .)
    ID              reduce using rule 9 (stmt -> READ ID SEMICOLON .)
    READ            reduce using rule 9 (stmt -> READ ID SEMICOLON .)
    WRITE           reduce using rule 9 (stmt -> READ ID SEMICOLON .)
    IF              reduce using rule 9 (stmt -> READ ID SEMICOLON .)
    WHILE           reduce using rule 9 (stmt -> READ ID SEMICOLON .)
    INT             reduce using rule 9 (stmt -> READ ID SEMICOLON .)
    LBRACE          reduce using rule 9 (stmt -> READ ID SEMICOLON .)


state 36

    (10) stmt -> WRITE logicor SEMICOLON .

    RBRACE          reduce using rule 10 (stmt -> WRITE logicor SEMICOLON .)
    ID              reduce using rule 10 (stmt -> WRITE logicor SEMICOLON .)
    READ            reduce using rule 10 (stmt -> WRITE logicor SEMICOLON .)
    WRITE           reduce using rule 10 (stmt -> WRITE logicor SEMICOLON .)
    IF              reduce using rule 10 (stmt -> WRITE logicor SEMICOLON .)
    WHILE           reduce using rule 10 (stmt -> WRITE logicor SEMICOLON .)
    INT             reduce using rule 10 (stmt -> WRITE logicor SEMICOLON .)
    LBRACE          reduce using rule 10 (stmt -> WRITE logicor SEMICOLON .)


state 37

    (15) logicor -> logicor OR . logicand
    (17) logicand -> . logicand AND compEq
    (18) logicand -> . compEq
    (19) compEq -> . compEq EQUALTO comp
    (20) compEq -> . compEq NOTEQUALTO comp
    (21) compEq -> . comp
    (22) comp -> . comp LESSTHAN expr
    (23) comp -> . comp LESSEQUALTO expr
    (24) comp -> . comp GREATERTHAN expr
    (25) comp -> . comp GREATEREQUALTO expr
    (26) comp -> . expr
    (27) expr -> . expr PLUS term
    (28) expr -> . expr MINUS term
    (29) expr -> . term
    (30) term -> . term TIMES factor
    (31) term -> . term DIVIDE factor
    (32) term -> . term MODULO factor
    (33) term -> . factor
